--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+** 0.9.0 **
+- Storage module
+
+** 0.8.0 **
+- Utility module
+
+** 0.7.0 **
+- Meta module
+
 ** 0.6.3 **
 - Hotfix dict/config get method
 
