--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+** 0.9.2 **
+- JSON parse for storage module
+
 ** 0.9.1 **
 - Changed storage module to provider and added js object as storage type
 
