--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+** 0.13.1 **
+- Utility.addQueryParams accepts an url different from current
+
 ** 0.13.0 **
 - New Storage module, with cookie and advanced use
 
