Callbacky: fixed trigger arguments bug

--- a/README
+++ b/README
@@ -1,80 +1,1 @@
-** 0.15.0 **
-- History Module
-
-** 0.14.3 **
-- Removed console.log from Utility.clickAndGo
-
-** 0.14.2 **
-- Utility.clickAndGo
-
-** 0.14.1 **
-- Callbacky.init new method, it gets verbose and logger arguments
-
-** 0.14.0 **
-- New Newton module
-
-** 0.13.2 **
-- New method in storage module: isLocalStorageSupported
-
-** 0.13.1 **
-- Utility.addQueryParams accepts an url different from current
-
-** 0.13.0 **
-- New Storage module, with cookie and advanced use
-
-** 0.12.0 **
-- Callbacky module
-
-** 0.11.0 **
-- Utility brutalRedirect
-
-** 0.10.1 **
-- Stargate module refactoring
-
-** 0.10.0 **
-- Stargate module
-
-** 0.9.4 **
-- Fixed void init case for config, dict and storage
-
-** 0.9.2 **
-- JSON parse for storage module
-
-** 0.9.1 **
-- Changed storage module to provider and added js object as storage type
-
-** 0.9.0 **
-- Storage module
-
-** 0.8.0 **
-- Utility module
-
-** 0.7.0 **
-- Meta module
-
-** 0.6.3 **
-- Hotfix dict/config get method
-
-** 0.6.2 **
-- Disabled masonry module
-
-** 0.6.1 **
-- Added timeout (100ms) to masonry
-
-** 0.6.0 **
-- Masonry module
-
-** 0.5.0 **
-- Newtontrack module
-
-** 0.4.0 **
-- Analytics module
-
-** 0.3.0 **
-- Dictionary module
-
-* 0.2.1 *
-- changed bower.json main
-
-** 0.2.0 **
-- Config & Logger modules
+Write me
