--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+** 2.0.0 **
+- Test
+- Documentation
+- Infinite module
+
 ** 1.1.0 **
 - New Config module
 - Installed esLint and test environment
