--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+** 2.7.0 **
+- Live-html directive parses also script tag inside (javascript in-code and js files inclusion)
+
 ** 2.6.2 **
 - hotfix livehtml
 
