--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+** 5.1.0 **
+- Meta.set takes an option callback
+- Added timeout to meta.set callback
+
 ** 5.0.0 **
 - Config module: uppercase transformation only passing 'uppercase:true' to init() method
 
